Chnage Tittle and remove unnecessary href

--- a/src/creative.html
+++ b/src/creative.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Vitality - Multipurpose Bootstrap 4 One Page Theme</title>
+    <title>Yasmel Barroso</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css">
@@ -26,18 +26,9 @@
     <link href="vendor/animate.css/animate.min.css" rel="stylesheet" type="text/css">
     <link href="device-mockups/device-mockups.min.css" rel="stylesheet" type="text/css">
 
-    <!-- Custom styles for this theme -->
-    <!-- Uncomment the color scheme you want to use! Red is chosen by default! -->
+    
     <link href="css/vitality-red.css" rel="stylesheet" type="text/css">
-    <!-- <link href="css/vitality-aqua.css" rel="stylesheet" type="text/css"> -->
-    <!-- <link href="css/vitality-blue.css" rel="stylesheet" type="text/css"> -->
-    <!-- <link href="css/vitality-green.css" rel="stylesheet" type="text/css"> -->
-    <!-- <link href="css/vitality-orange.css" rel="stylesheet" type="text/css"> -->
-    <!-- <link href="css/vitality-pink.css" rel="stylesheet" type="text/css"> -->
-    <!-- <link href="css/vitality-purple.css" rel="stylesheet" type="text/css"> -->
-    <!-- <link href="css/vitality-tan.css" rel="stylesheet" type="text/css"> -->
-    <!-- <link href="css/vitality-turquoise.css" rel="stylesheet" type="text/css"> -->
-    <!-- <link href="css/vitality-yellow.css" rel="stylesheet" type="text/css"> -->
+  
 
   </head>
 
